# airwindows_VariMu_GUI_VST3

./: CMakeLists.txt  README.md
resource/: VariMueditor.aps  VariMueditor.rc  VariMueditor.uidesc  resource.h
source/: CustomParameter.h  VariMucids.h  VariMucontroller.cpp  VariMucontroller.h  VariMuentry.cpp  VariMuparam.h  VariMuprocessor.cpp  VariMuprocessor.h  version.h
